# daily-arXiv-ai-enhanced

./: PRD-scoring-system-v2.md  PRD-scoring-system.md  README.md  REFACTOR_REPORT.md  RESEARCH_FOCUS.md  SYSTEM_REPORT.md  index.html  login.html  pyproject.toml  run.sh  settings.html  statistic.html  sw.js  template.md  update_readme.py
SKILL/: SKILL.md
ai/: enhance.py  filter.py  scorer.py  structure.py  system.txt  template.txt
assets/: file-list.txt
buy-me-a-coffee/: README.md
config/: keywords.yaml  research_focus.yaml
css/: styles.css
data/: 2026-06-15.jsonl  2026-06-15.md  2026-06-15_AI_enhanced_English.jsonl  2026-06-15_scored.jsonl  2026-06-15_top15.jsonl  2026-06-17.jsonl  2026-06-17.md  2026-06-17_AI_enhanced_English.jsonl  2026-06-17_scored.jsonl  2026-06-17_top15.jsonl  2026-07-16.jsonl  2026-07-16_AI_enhanced_Chinese.jsonl  2026-07-16_scored.jsonl  2026-07-16_top15.jsonl  2026-07-17.jsonl  2026-07-17_AI_enhanced_Chinese.jsonl  2026-07-17_scored.jsonl  2026-07-17_top15.jsonl  2026-07-18.jsonl  2026-07-18_AI_enhanced_Chinese.jsonl  2026-07-18_scored.jsonl  2026-07-18_top15.jsonl  2026-07-19.jsonl  2026-07-19_AI_enhanced_Chinese.jsonl  2026-07-19_scored.jsonl  2026-07-19_top15.jsonl  2026-07-20.jsonl  2026-07-20_AI_enhanced_Chinese.jsonl  2026-07-20_scored.jsonl  2026-07-20_top15.jsonl  2026-07-21.jsonl  2026-07-21_AI_enhanced_Chinese.jsonl  2026-07-21_scored.jsonl  2026-07-21_top15.jsonl  2026-07-22.jsonl  2026-07-22_AI_enhanced_Chinese.jsonl  2026-07-22_scored.jsonl  2026-07-22_top15.jsonl  2026-07-23.jsonl  2026-07-23_AI_enhanced_Chinese.jsonl  (+6 more)
(+12 files in other folders)
