[project]
name = "daily-arxiv"
version = "0.1.0"
description = "Daily crawl arXiv papers and use LLMs to summarize them"
authors = [
    {name = "70asunflower", email = "1982043113@qq.com"},
    {name = "Jian Guan", email = "jianguanthu@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
license = "Apache-2.0"
